--- a/Blog.Client/Components/Pages/Components/Notification/AllNotification.razor
+++ b/Blog.Client/Components/Pages/Components/Notification/AllNotification.razor
@@ -67,6 +67,7 @@ else
                                 <h1 class="cursor-pointer">View</h1>
                             </button>
                             <button @onclick="() => DeleteNotification.InvokeAsync(notif.Id)"
+                                    @onclick:stopPropagation="true"
                                     class="cursor-pointer p-2 text-slate-400 hover:text-red-600 hover:bg-red-50 rounded-lg transition-colors"
                                     title="Delete">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
