--- a/Blog.Client/Components/Pages/Admin/Components/Published.razor
+++ b/Blog.Client/Components/Pages/Admin/Components/Published.razor
@@ -7,14 +7,20 @@
         foreach (var post in allLoadedPosts)
         {
 
-            <article class="bg-white rounded-2xl p-6 border border-gray-200 hover:-translate-y-1 hover:shadow-xl hover:border-indigo-600 transition-all cursor-pointer relative group">
+            <NavLink href="@($"viewblogconstruct/{post.Id}")" class="bg-white rounded-2xl p-6 border border-gray-200 hover:-translate-y-1 hover:shadow-xl hover:border-indigo-600 transition-all cursor-pointer relative group">
                 <div class="absolute top-4 right-4 opacity-0 group-hover:opacity-100 transition-opacity flex gap-2">
-                    <button class="bg-indigo-100 hover:bg-indigo-200 text-indigo-600 p-2 rounded-lg">
+                    <button @onclick="() => UpdateModal(post.Id,post.CategoryId, post.Tags)"
+                            @onclick:stopPropagation="true"
+                            @onclick:preventDefault="true"
+                        class="cursor-pointer bg-indigo-100 hover:bg-indigo-200 text-indigo-600 p-2 rounded-lg">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                         </svg>
                     </button>
-                    <button @onclick="() => DeletePost(post.Id)" class=" bg-red-100 hover:bg-red-200 text-red-600 p-2 rounded-lg">
+                    <button @onclick="() => DeletePost(post.Id)"
+                            @onclick:stopPropagation="true"
+                            @onclick:preventDefault="true"
+                        class=" bg-red-100 hover:bg-red-200 text-red-600 p-2 rounded-lg">
                         <svg class="w-4 h-4 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                         </svg>
@@ -41,7 +47,7 @@
                         @post.Status
                     </span>
                 </div>
-            </article>
+            </NavLink>
         }
     }
     else
@@ -85,7 +91,7 @@
 }
 else if (allLoadedPosts.Any())
 {
-    <div class="text-center mt-8 py-6">
+    <div class="text-center mt-5 py-6">
         <div class="inline-flex items-center gap-2 px-6 py-3 bg-gradient-to-r from-indigo-50 to-purple-50 rounded-xl">
             <span class="text-2xl">✓</span>
             <p class="text-slate-700 font-medium">
@@ -97,11 +103,13 @@ else if (allLoadedPosts.Any())
 
 
 
-
+<UpdatePost PostId="PostId" CategoryId="CategoryId" Tags="Tags" />
 
 
 @code {
 
+    [Parameter]
+    public EventCallback<bool> Refresh { get; set; }
 
     [Parameter]
     public ListPaginatedRequest Pagination { get; set; } = new ListPaginatedRequest();
@@ -112,27 +120,18 @@ else if (allLoadedPosts.Any())
     [Parameter]
     public EventCallback OnLoadMore { get; set; }
 
-
+    private bool HasMorePost => ListForAdmin != null && Pagination.PageNumber < ListForAdmin.TotalPages;
     public bool IsloadingMore = false;
 
-    [Parameter]
-    public EventCallback<bool> Refresh { get; set; }
-
     private List<PostDto> allLoadedPosts = new List<PostDto>();
-
-    private bool HasMorePost => ListForAdmin != null && Pagination.PageNumber < ListForAdmin.TotalPages;
     private DeletePostRequest delete { get; set; } = new DeletePostRequest();
 
-
-    protected override async Task OnInitializedAsync()
-    {
-        await Refresh.InvokeAsync();
-    }
-
+    public int? PostId { get; set; }
+    public int? CategoryId { get; set; }
+    public List<TagDto>? Tags { get; set; }
     protected override void OnParametersSet()
     {
         LoadAll();
-
     }
 
     public void LoadAll()
@@ -150,10 +149,24 @@ else if (allLoadedPosts.Any())
         }
     }
 
+    public async Task UpdateModal(int? PostId, int? CategoryId, List<TagDto>? Tags)
+    {
+        this.PostId = PostId;
+        this.CategoryId = CategoryId;
+        this.Tags = Tags;
+        await JS.InvokeVoidAsync("eval", "document.getElementById('update_post').checked = true");
+        StateHasChanged();
+    }
     public async Task DeletePost(int? PostId)
     {
         delete.PostId = PostId;
         await PostClient.Delete(delete);
+        await Refresh.InvokeAsync();
+        var del = allLoadedPosts.FirstOrDefault(s => s.Id == PostId);
+        if (del is not null)
+        {
+            allLoadedPosts.Remove(del);
+        }
         StateHasChanged();
     }
 
